--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon index.js",
-		"start": "node index.js"
+		"server": "node index.js",
+		"client": "npm start --prefix client",
+		"start": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "Marty Six",
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^0.19.2",
+		"concurrently": "^5.2.0",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"helmet": "^3.22.0",
