--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"server": "node server.js",
 		"client": "npm start --prefix client",
 		"start": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "cd client && npm install && npm run build"
+		"heroku-postbuild": "cd client/ && npm install && npm install -- only=dev --no-shrinkwrap && npm run build"
 	},
 	"author": "Marty Six",
 	"license": "MIT",
