--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon server.js",
-		"server": "node server.js",
+		"start": "node server.js",
 		"client": "npm start --prefix client",
-		"start": "concurrently \"npm run server\" \"npm run client\"",
+		"devStart": "concurrently \"npm run server\" \"npm run client\"",
 		"heroku-postbuild": "cd ../client && npm install && npm install -- only=dev --no-shrinkwrap && npm run build"
 	},
 	"author": "Marty Six",
