--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
 		"dev": "nodemon server.js",
 		"start": "node server.js",
 		"client": "npm start --prefix client",
-		"devStart": "concurrently \"npm run server\" \"npm run client\"",
-		"heroku-postbuild": "cd client && npm install && npm install -- only=dev --no-shrinkwrap && npm run build"
+		"devStart": "concurrently \"npm run start\" \"npm run client\"",
+		"heroku-postbuild": "cd client && npm install && npm run build"
 	},
 	"author": "Marty Six",
 	"license": "MIT",
