--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"dev": "nodemon server.js",
 		"start": "node server.js",
-		"client": "npm start --prefix client",
+		"client": "cd client && npm run dev",
 		"devStart": "concurrently \"npm run start\" \"npm run client\"",
 		"heroku-postbuild": "cd client && npm install && npm run build"
 	},
